--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,4 +7,6 @@
 body {
   font-family: sans-serif;
   background-color: #f9f9f9;
+  width: 100%;
+  height: 100vh;
 }/*# sourceMappingURL=index.css.map */
