--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -31,6 +31,7 @@
   text-align: start;
 }
 .login-wrapper .login-page .login-section .login-page__form form {
+  position: relative;
   flex: 9;
   display: flex;
   flex-direction: column;
@@ -80,8 +81,18 @@
   text-decoration: none;
   color: #85c8ff;
 }
+.login-wrapper .login-page .login-section .login-page__form form .error-message {
+  color: #e74c3c;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  animation-name: error-message;
+  animation-duration: 2s;
+  animation-iteration-count: 3;
+  animation-timing-function: ease-in-out;
+}
 .login-wrapper .login-page .login-section .login-page__form form button {
-  margin-top: 1rem;
+  position: absolute;
+  top: 100%;
   padding: 1rem;
   background-color: #4f9cf9;
   color: white;
@@ -94,6 +105,7 @@
   background-color: #3c8ce3;
 }
 .login-wrapper .login-page .login-section .login-page__form .signup-link {
+  margin-top: 11rem;
   flex: 1;
   width: 80%;
 }
@@ -116,4 +128,13 @@
   max-height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+@keyframes error-message {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
 }/*# sourceMappingURL=login.css.map */
