--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,4 +10,16 @@ body {
   background-color: #f9f9f9;
   width: 100%;
   height: 100vh;
+}
+body .dashboard-page {
+  display: flex;
+  height: 100vh;
+}
+body .dashboard-page .sidebar {
+  background-color: lightblue;
+  flex: 1;
+}
+body .dashboard-page .card {
+  background-color: lightcyan;
+  flex: 8;
 }/*# sourceMappingURL=index.css.map */
