--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,4 +10,17 @@ body {
   background-color: #f9f9f9;
   width: 100%;
   height: 100vh;
+  .dashboard-page {
+    display: flex;
+    height: 100vh;
+    .sidebar {
+      background-color: lightblue;
+      flex: 1;
+    }
+    .card {
+      background-color: lightcyan;
+
+      flex: 8;
+    }
+  }
 }
