--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -7,7 +7,6 @@
 }
 .card-container .card-header {
   flex: 2;
-  background-color: lightblue;
 }
 .card-container .card-header h1 {
   padding: 1rem;
@@ -15,6 +14,29 @@
   margin: 1rem 0 0 3rem;
 }
 .card-container .card-body {
-  background-color: lightcoral;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
   flex: 8;
+}
+.card-container .card-body .card-weight {
+  grid-area: 1/1/3/3;
+  background-color: lightblue;
+}
+.card-container .card-body .card-workout {
+  grid-area: 1/3/3/5;
+  background-color: lightcoral;
+}
+.card-container .card-body .card-protein {
+  grid-area: 1/5/3/7;
+  background-color: lightblue;
+}
+.card-container .card-body .card-weight-change {
+  background-color: lightcoral;
+  grid-area: 3/1/5/7;
+}
+.card-container .card-body .card-tip {
+  grid-area: 5/1/7/7;
 }/*# sourceMappingURL=card.css.map */
