--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -14,7 +14,6 @@
   );
   .card-header {
     flex: 2;
-    background-color: lightblue;
     h1 {
       padding: 1rem;
       font-size: 2.5rem;
@@ -22,21 +21,35 @@
     }
   }
   .card-body {
-    background-color: lightcoral;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     flex: 8;
     .card-item {
     }
     .card-bar {
     }
     .card-weight {
+      grid-area: 1 / 1 / 3 / 3;
+      background-color: lightblue;
     }
     .card-workout {
+      grid-area: 1 / 3 / 3 / 5;
+      background-color: lightcoral;
     }
     .card-protein {
+      grid-area: 1 / 5 / 3 / 7;
+      background-color: lightblue;
     }
     .card-weight-change {
+      background-color: lightcoral;
+
+      grid-area: 3 / 1 / 5 / 7;
     }
     .card-tip {
+      grid-area: 5 / 1 / 7 / 7;
     }
   }
 }
