--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -21,6 +21,36 @@
   grid-row-gap: 0px;
   flex: 8;
 }
+.card-container .card-body .card-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.card-container .card-body .card-item .card-item-header {
+  display: flex;
+  gap: 1rem;
+}
+.card-container .card-body .card-item .card-item-header h1 {
+  font-size: 2.5rem;
+}
+.card-container .card-body .card-item .card-item-header .icon {
+  font-size: 3rem;
+}
+.card-container .card-body .card-item .card-item-header .workout {
+  transform: rotate(-30deg);
+  text-align: start;
+}
+.card-container .card-body .card-item .card-item-body h1 {
+  font-size: 2rem;
+}
+.card-container .card-body .card-bar {
+  padding: 2rem 3rem 3rem 3rem;
+}
+.card-container .card-body .card-bar h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
 .card-container .card-body .card-weight {
   grid-area: 1/1/3/3;
   background-color: lightblue;
