--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -28,8 +28,36 @@
     grid-row-gap: 0px;
     flex: 8;
     .card-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .card-item-header {
+        display: flex;
+        gap: 1rem;
+        h1 {
+          font-size: 2.5rem;
+        }
+        .icon {
+          font-size: 3rem;
+        }
+        .workout {
+          transform: rotate(-30deg);
+          text-align: start;
+        }
+      }
+      .card-item-body {
+        h1 {
+          font-size: 2rem;
+        }
+      }
     }
     .card-bar {
+      padding: 2rem 3rem 3rem 3rem;
+      h1 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+      }
     }
     .card-weight {
       grid-area: 1 / 1 / 3 / 3;
