--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -32,9 +32,10 @@
   gap: 1rem;
 }
 .card-container .card-body .card-item .card-item-header h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 .card-container .card-body .card-item .card-item-header .icon {
+  color: #47b5ff;
   font-size: 3rem;
 }
 .card-container .card-body .card-item .card-item-header .workout {
@@ -42,7 +43,7 @@
   text-align: start;
 }
 .card-container .card-body .card-item .card-item-body h1 {
-  font-size: 2rem;
+  font-size: 3rem;
 }
 .card-container .card-body .card-bar {
   padding: 2rem 3rem 3rem 3rem;
