--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -36,9 +36,10 @@
         display: flex;
         gap: 1rem;
         h1 {
-          font-size: 2.5rem;
+          font-size: 2rem;
         }
         .icon {
+          color: #47b5ff;
           font-size: 3rem;
         }
         .workout {
@@ -48,7 +49,7 @@
       }
       .card-item-body {
         h1 {
-          font-size: 2rem;
+          font-size: 3rem;
         }
       }
     }
