--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -45,6 +45,19 @@
 .card-container .card-body .card-item .card-item-body h1 {
   font-size: 3rem;
 }
+.card-container .card-body .card-item .card-item-body .protein-bar {
+  width: 100%;
+  height: 20%;
+  border-radius: 1rem;
+  background-color: #8cc0de;
+}
+.card-container .card-body .card-item .card-item-body .protein-bar .protein-bar-fill {
+  background-color: #47b5ff;
+  border-radius: 1rem;
+  height: 100%;
+  width: 0%;
+  transition: width 0.3s ease;
+}
 .card-container .card-body .card-bar {
   padding: 2rem 3rem 3rem 3rem;
 }
@@ -62,7 +75,6 @@
 }
 .card-container .card-body .card-protein {
   grid-area: 1/5/3/7;
-  background-color: lightblue;
 }
 .card-container .card-body .card-weight-change {
   background-color: lightcoral;
