--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -51,6 +51,19 @@
         h1 {
           font-size: 3rem;
         }
+        .protein-bar {
+          width: 100%;
+          height: 20%;
+          border-radius: 1rem;
+          background-color: #8cc0de;
+          .protein-bar-fill {
+            background-color: #47b5ff;
+            border-radius: 1rem;
+            height: 100%;
+            width: 0%;
+            transition: width 0.3s ease;
+          }
+        }
       }
     }
     .card-bar {
@@ -70,7 +83,6 @@
     }
     .card-protein {
       grid-area: 1 / 5 / 3 / 7;
-      background-color: lightblue;
     }
     .card-weight-change {
       background-color: lightcoral;
