--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -53,6 +53,7 @@
 }
 .card-container .card-body .card-item .card-item-body .protein-bar .protein-bar-fill {
   background-color: #47b5ff;
+  box-shadow: 4px 0 2px 0 rgba(229, 212, 212, 0.63);
   border-radius: 1rem;
   height: 100%;
   width: 0%;
