--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -58,6 +58,7 @@
           background-color: #8cc0de;
           .protein-bar-fill {
             background-color: #47b5ff;
+            box-shadow: 4px 0 2px 0 rgba(229, 212, 212, 0.63);
             border-radius: 1rem;
             height: 100%;
             width: 0%;
