--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -66,6 +66,13 @@
   font-size: 2rem;
   margin-bottom: 1rem;
 }
+.card-container .card-body .card-weight-change {
+  height: 100%;
+}
+.card-container .card-body .card-weight-change canvas {
+  width: 20% !important;
+  height: 20% !important;
+}
 .card-container .card-body .card-weight {
   grid-area: 1/1/3/3;
 }
