--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -6,7 +6,7 @@
   background: linear-gradient(135deg, #dff6ff 0%, #8cc0de 50%, #47b5ff 100%);
 }
 .card-container .card-header {
-  flex: 2;
+  flex: 1.5;
 }
 .card-container .card-header h1 {
   padding: 1rem;
@@ -19,7 +19,7 @@
   grid-template-rows: repeat(6, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  flex: 8;
+  flex: 8.5;
 }
 .card-container .card-body .card-item {
   display: flex;
@@ -67,26 +67,27 @@
   margin-bottom: 1rem;
 }
 .card-container .card-body .card-weight-change {
-  height: 100%;
+  height: 200px;
+  padding: 2rem 3rem 3rem 3rem;
 }
 .card-container .card-body .card-weight-change canvas {
-  width: 20% !important;
-  height: 20% !important;
+  width: 100% !important;
+  max-height: 200px !important;
 }
 .card-container .card-body .card-weight {
-  grid-area: 1/1/3/3;
+  grid-area: 1/1/2/3;
 }
 .card-container .card-body .card-workout {
-  grid-area: 1/3/3/5;
+  grid-area: 1/3/2/5;
 }
 .card-container .card-body .card-protein {
-  grid-area: 1/5/3/7;
+  grid-area: 1/5/2/7;
 }
 .card-container .card-body .card-weight-change {
-  grid-area: 3/1/5/7;
+  grid-area: 2/1/5/7;
 }
 .card-container .card-body .card-tip {
-  grid-area: 5/1/7/7;
+  grid-area: 5/1/8/7;
 }
 .card-container .card-body .card-tip h2 {
   font-size: 2rem;
