--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -13,7 +13,7 @@
     #47b5ff 100% // 最深藍
   );
   .card-header {
-    flex: 2;
+    flex: 1.5;
     h1 {
       padding: 1rem;
       font-size: 2.5rem;
@@ -26,7 +26,7 @@
     grid-template-rows: repeat(6, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    flex: 8;
+    flex: 8.5;
     .card-item {
       display: flex;
       flex-direction: column;
@@ -75,26 +75,27 @@
       }
     }
     .card-weight-change {
-      height: 100%;
+      height: 200px;
+      padding: 2rem 3rem 3rem 3rem;
       canvas {
-        width: 20% !important;
-        height: 20% !important;
+        width: 100% !important;
+        max-height: 200px !important;
       }
     }
     .card-weight {
-      grid-area: 1 / 1 / 3 / 3;
+      grid-area: 1 / 1 / 2 / 3;
     }
     .card-workout {
-      grid-area: 1 / 3 / 3 / 5;
+      grid-area: 1 / 3 / 2 / 5;
     }
     .card-protein {
-      grid-area: 1 / 5 / 3 / 7;
+      grid-area: 1 / 5 / 2 / 7;
     }
     .card-weight-change {
-      grid-area: 3 / 1 / 5 / 7;
+      grid-area: 2 / 1 / 5 / 7;
     }
     .card-tip {
-      grid-area: 5 / 1 / 7 / 7;
+      grid-area: 5 / 1 / 8 / 7;
       h2 {
         font-size: 2rem;
       }
