--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -6,7 +6,7 @@
   background: linear-gradient(135deg, #dff6ff 0%, #8cc0de 50%, #47b5ff 100%);
 }
 .card-container .card-header {
-  flex: 1.5;
+  flex: 1;
 }
 .card-container .card-header h1 {
   padding: 1rem;
@@ -16,16 +16,21 @@
 .card-container .card-body {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: repeat(8, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  flex: 8.5;
+  flex: 9;
 }
 .card-container .card-body .card-item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  margin-left: 20%;
+  padding: 1.5rem;
+  background-color: white;
+  border-radius: 10%;
+  width: 50%;
 }
 .card-container .card-body .card-item .card-item-header {
   display: flex;
@@ -60,34 +65,37 @@
   transition: width 0.3s ease;
 }
 .card-container .card-body .card-bar {
-  padding: 2rem 3rem 3rem 3rem;
+  height: 80%;
+  width: 90%;
+  margin: 2rem 0 0 5rem;
+  padding: 2rem;
+  background-color: white;
+  border-radius: 1rem;
 }
 .card-container .card-body .card-bar h1 {
   font-size: 2rem;
   margin-bottom: 1rem;
 }
 .card-container .card-body .card-weight-change {
-  height: 200px;
-  padding: 2rem 3rem 3rem 3rem;
+  height: 80%;
 }
 .card-container .card-body .card-weight-change canvas {
-  width: 100% !important;
-  max-height: 200px !important;
+  max-height: 100px !important;
 }
 .card-container .card-body .card-weight {
-  grid-area: 1/1/2/3;
+  grid-area: 1/1/3/3;
 }
 .card-container .card-body .card-workout {
-  grid-area: 1/3/2/5;
+  grid-area: 1/3/3/5;
 }
 .card-container .card-body .card-protein {
-  grid-area: 1/5/2/7;
+  grid-area: 1/5/3/7;
 }
 .card-container .card-body .card-weight-change {
-  grid-area: 2/1/5/7;
+  grid-area: 3/1/6/7;
 }
 .card-container .card-body .card-tip {
-  grid-area: 5/1/8/7;
+  grid-area: 6/1/9/7;
 }
 .card-container .card-body .card-tip h2 {
   font-size: 2rem;
