--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -29,6 +29,7 @@
     flex: 9;
     .card-item {
       display: flex;
+      position: relative;
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
@@ -69,6 +70,20 @@
             width: 0%;
             transition: width 0.3s ease;
           }
+        }
+      }
+      .card-crud-item {
+        position: absolute;
+        right: -28%;
+        top: 5%;
+        .card-crud-btn {
+          padding: 0.2rem;
+          margin-bottom: 0.2rem;
+          border-radius: 10px;
+          background-color: white;
+          width: 110%;
+          text-align: center;
+          font-size: 1.2rem;
         }
       }
     }
