--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -83,7 +83,13 @@
           background-color: white;
           width: 110%;
           text-align: center;
-          font-size: 1.2rem;
+          button {
+            font-size: 1.2rem;
+            width: 100%;
+            border: none;
+            background-color: white;
+            cursor: pointer;
+          }
         }
       }
     }
