--- a/src/styles/setup.css
+++ b/src/styles/setup.css
@@ -1,1 +1,16 @@
-/*# sourceMappingURL=setup.css.map */
+.setup {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: antiquewhite;
+}
+.setup .form-setting .form {
+  background-color: lightpink;
+  height: 70vh;
+  width: 30vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}/*# sourceMappingURL=setup.css.map */
