--- a/src/styles/setup.css
+++ b/src/styles/setup.css
@@ -6,10 +6,31 @@
   justify-content: center;
   background-color: antiquewhite;
 }
+.setup .form-setting {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: lightgreen;
+  width: 60%;
+  border-radius: 20px;
+}
+.setup .form-setting .step-bar {
+  width: 100%;
+  height: 20vh;
+}
+.setup .form-setting .bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20%;
+  height: 100%;
+  width: 100%;
+}
 .setup .form-setting .form {
+  border-radius: 0 0 20px 20px;
   background-color: lightpink;
-  height: 70vh;
-  width: 30vw;
+  height: 50vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
