--- a/src/styles/setup.scss
+++ b/src/styles/setup.scss
@@ -34,6 +34,60 @@
       align-items: center;
     }
     .weight-input {
+      display: flex;
+      align-items: center;
+      .weight-bar {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 60%;
+        gap: 3rem;
+        margin: 1rem 0;
+      }
+      .form-input {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: wheat;
+        width: 50%;
+        height: 50%;
+        .date,
+        .weight {
+          display: flex;
+          justify-content: center;
+          width: 100%;
+          h2 {
+            align-items: center;
+            width: 30%;
+          }
+          input {
+            width: 30%;
+            border-radius: 5px;
+            border: none;
+            text-decoration: none;
+            font-size: 0.9rem;
+            text-align: center;
+          }
+        }
+        .date {
+          margin: 3rem 0;
+        }
+      }
+      .input-btn {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        text-align: center;
+        width: 50%;
+        margin-top: 2rem;
+        button {
+          cursor: pointer;
+          font-size: 1.2rem;
+          border: 0;
+          border-radius: 5px;
+          padding: 0.1rem;
+        }
+      }
     }
     .count-input {
     }
