--- a/src/styles/setup.css
+++ b/src/styles/setup.css
@@ -24,7 +24,36 @@
   justify-content: center;
   gap: 20%;
   height: 100%;
+  max-width: 100%;
   width: 100%;
+  font-size: 1.5rem;
+  position: relative;
+}
+.setup .form-setting .bar .progress::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  background-color: #e0e0e0;
+  height: 5px;
+}
+.setup .form-setting .bar .progress {
+  position: absolute;
+  width: 45%;
+  height: 5px;
+  transition: 0.3s ease;
+}
+.setup .form-setting .bar .circle {
+  width: 30px;
+  height: 30px;
+  border: 3px solid #e0e0e0;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s ease;
+}
+.setup .form-setting .bar .circle.active {
+  border: 3px solid gray;
 }
 .setup .form-setting .form {
   border-radius: 0 0 20px 20px;
@@ -42,10 +71,38 @@
 .setup .form-setting .weight-input .weight-bar {
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 60%;
+  justify-content: space-evenly;
+  width: 70%;
   gap: 3rem;
   margin: 1rem 0;
+  font-size: 1.2rem;
+}
+.setup .form-setting .weight-input .weight-bar .progress::before {
+  content: "";
+  position: absolute;
+  width: 80%;
+  background-color: #e0e0e0;
+  height: 5px;
+  translate: 12.5%;
+}
+.setup .form-setting .weight-input .weight-bar .progress {
+  position: absolute;
+  width: 45%;
+  height: 5px;
+  transition: 0.3s ease;
+}
+.setup .form-setting .weight-input .weight-bar .circle {
+  width: 30px;
+  height: 30px;
+  border: 3px solid #e0e0e0;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s ease;
+}
+.setup .form-setting .weight-input .weight-bar .circle.active {
+  border: 3px solid gray;
 }
 .setup .form-setting .weight-input .form-input {
   display: flex;
