--- a/src/styles/setup.scss
+++ b/src/styles/setup.scss
@@ -38,7 +38,7 @@
         position: absolute;
         width: 45%;
         height: 5px;
-        transition: 0.3s ease;
+        left: 0;
       }
       .circle {
         width: 30px;
@@ -67,32 +67,36 @@
       display: flex;
       align-items: center;
       .weight-bar {
+        position: relative;
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-between;
         width: 70%;
         gap: 3rem;
         margin: 1rem 0;
         font-size: 1.2rem;
-        .progress::before {
+        &::before {
           content: "";
           position: absolute;
-          width: 80%;
+          width: 93%;
+          left: 3.7%;
           background-color: #e0e0e0;
           height: 5px;
-          translate: 12.5%;
         }
         .progress {
           position: absolute;
-          width: 45%;
           height: 5px;
           transition: 0.3s ease;
+          left: 3.7%;
+          top: 50%;
+          background-color: green;
+          transform: translateY(-50%);
         }
         .circle {
           width: 30px;
           height: 30px;
           border: 3px solid #e0e0e0;
-          border-radius: 10px;
+          border-radius: 50%;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -143,7 +147,7 @@
           font-size: 1.2rem;
           border: 0;
           border-radius: 5px;
-          padding: 0.1rem;
+          padding: 0.1rem 0.5rem;
         }
       }
     }
