--- a/src/styles/setup.css
+++ b/src/styles/setup.css
@@ -15,45 +15,43 @@
   border-radius: 20px;
 }
 .setup .form-setting .step-bar {
-  width: 100%;
+  width: 60%;
   height: 20vh;
-}
-.setup .form-setting .bar {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 20%;
-  height: 100%;
+  justify-content: space-between;
   max-width: 100%;
-  width: 100%;
-  font-size: 1.5rem;
   position: relative;
+  font-size: 1.5rem;
 }
-.setup .form-setting .bar .progress::before {
+.setup .form-setting .step-bar::before {
   content: "";
   position: absolute;
-  width: 100%;
+  width: 92%;
   background-color: #e0e0e0;
   height: 5px;
+  left: 4%;
 }
-.setup .form-setting .bar .progress {
+.setup .form-setting .step-bar .step-progress {
   position: absolute;
-  width: 45%;
+  width: 100%;
   height: 5px;
-  left: 0;
+  left: 4%;
+  transition: 0.3s ease;
+  background-color: green;
 }
-.setup .form-setting .bar .circle {
+.setup .form-setting .step-bar .step-circle {
   width: 30px;
   height: 30px;
   border: 3px solid #e0e0e0;
-  border-radius: 10px;
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: 0.3s ease;
 }
-.setup .form-setting .bar .circle.active {
-  border: 3px solid gray;
+.setup .form-setting .step-bar .step-circle.active {
+  border: 3px solid green;
 }
 .setup .form-setting .form {
   border-radius: 0 0 20px 20px;
@@ -106,7 +104,7 @@
   transition: 0.3s ease;
 }
 .setup .form-setting .weight-input .weight-bar .circle.active {
-  border: 3px solid gray;
+  border: 3px solid green;
 }
 .setup .form-setting .weight-input .form-input {
   display: flex;
@@ -153,4 +151,21 @@
   border: 0;
   border-radius: 5px;
   padding: 0.1rem 0.5rem;
+}
+.setup .form-setting .weight-input .input-btn .save.disable {
+  display: none;
+  background-color: gray;
+  pointer-events: none;
+  cursor: not-allowed;
+  transition: 0.3 ease;
+}
+.setup .form-setting .weight-input .input-btn .save.active {
+  display: block;
+  background-color: green;
+}
+.setup .form-setting .weight-input .input-btn .next.disable {
+  display: none;
+}
+.setup .form-setting .weight-input .input-btn .next.active {
+  display: block;
 }/*# sourceMappingURL=setup.css.map */
