--- a/src/styles/setup.scss
+++ b/src/styles/setup.scss
@@ -13,44 +13,41 @@
     width: 60%;
     border-radius: 20px;
     .step-bar {
-      width: 100%;
+      width: 60%;
       height: 20vh;
-    }
-    .bar {
       display: flex;
       align-items: center;
-      justify-content: center;
-      gap: 20%;
-      height: 100%;
+      justify-content: space-between;
       max-width: 100%;
-      width: 100%;
-      font-size: 1.5rem;
       position: relative;
-
-      .progress::before {
+      font-size: 1.5rem;
+      &::before {
         content: "";
         position: absolute;
-        width: 100%;
+        width: 92%;
         background-color: #e0e0e0;
         height: 5px;
+        left: 4%;
       }
-      .progress {
+      .step-progress {
         position: absolute;
-        width: 45%;
+        width: 100%;
         height: 5px;
-        left: 0;
+        left: 4%;
+        transition: 0.3s ease;
+        background-color: green;
       }
-      .circle {
+      .step-circle {
         width: 30px;
         height: 30px;
         border: 3px solid #e0e0e0;
-        border-radius: 10px;
+        border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
         transition: 0.3s ease;
         &.active {
-          border: 3px solid gray;
+          border: 3px solid green;
         }
       }
     }
@@ -102,7 +99,7 @@
           justify-content: center;
           transition: 0.3s ease;
           &.active {
-            border: 3px solid gray;
+            border: 3px solid green;
           }
         }
       }
@@ -148,6 +145,27 @@
           border: 0;
           border-radius: 5px;
           padding: 0.1rem 0.5rem;
+        }
+        .save {
+          &.disable {
+            display: none;
+            background-color: gray;
+            pointer-events: none; // 讓它不能點
+            cursor: not-allowed;
+            transition: 0.3 ease;
+          }
+          &.active {
+            display: block;
+            background-color: green;
+          }
+        }
+        .next {
+          &.disable {
+            display: none;
+          }
+          &.active {
+            display: block;
+          }
         }
       }
     }
