--- a/src/styles/setup.css
+++ b/src/styles/setup.css
@@ -62,6 +62,9 @@
   flex-direction: column;
   align-items: center;
 }
+.setup .form-setting .form.disable {
+  display: none;
+}
 .setup .form-setting .weight-input {
   display: flex;
   align-items: center;
@@ -137,7 +140,7 @@
 .setup .form-setting .weight-input .form-input .date {
   margin: 3rem 0;
 }
-.setup .form-setting .weight-input .input-btn {
+.setup .input-btn {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -145,27 +148,27 @@
   width: 50%;
   margin-top: 2rem;
 }
-.setup .form-setting .weight-input .input-btn button {
+.setup .input-btn button {
   cursor: pointer;
   font-size: 1.2rem;
   border: 0;
   border-radius: 5px;
   padding: 0.1rem 0.5rem;
 }
-.setup .form-setting .weight-input .input-btn .save.disable {
+.setup .input-btn .save.disable {
   display: none;
   background-color: gray;
   pointer-events: none;
   cursor: not-allowed;
   transition: 0.3 ease;
 }
-.setup .form-setting .weight-input .input-btn .save.active {
+.setup .input-btn .save.active {
   display: block;
   background-color: green;
 }
-.setup .form-setting .weight-input .input-btn .next.disable {
+.setup .input-btn .next.disable {
   display: none;
 }
-.setup .form-setting .weight-input .input-btn .next.active {
+.setup .input-btn .next.active {
   display: block;
 }/*# sourceMappingURL=setup.css.map */
