--- a/src/styles/setup.css
+++ b/src/styles/setup.css
@@ -44,7 +44,7 @@
 .setup .form-setting .step-bar .step-circle {
   width: 30px;
   height: 30px;
-  border: 3px solid #e0e0e0;
+  border: 3px solid #d6d6d6;
   border-radius: 50%;
   display: flex;
   align-items: center;
