--- a/src/styles/setup.scss
+++ b/src/styles/setup.scss
@@ -41,7 +41,7 @@
       .step-circle {
         width: 30px;
         height: 30px;
-        border: 3px solid #e0e0e0;
+        border: 3px solid #d6d6d6;
         border-radius: 50%;
         display: flex;
         align-items: center;
